--- a/Pages/Como-comprar.html
+++ b/Pages/Como-comprar.html
@@ -145,6 +145,12 @@
         </li>
       </ol>
     </section>
+
+    <section class="eventos" >
+      <h1>
+        <img src="../Images/eventos.PNG" alt="capture4" width="1290"  height="400px">
+      </h1>
+    </section>
     </main>
 
     <footer class="footercito">
