Tercera pre entrega

--- a/Pages/Perfil.html
+++ b/Pages/Perfil.html
@@ -72,7 +72,7 @@
                 <div class="row col-12 col-md-6" style="margin:auto">
                     <div class="card card-lg mb-6 mb-md-0 text-center">
                         <div class="card-body">
-                            </h3 class="mb-7"> Ya tengo cuenta</h3>
+                            <h3 class="m-4">Ya tengo Cuenta</h3>
                              <form method="POST" action="/login/process" _lpchecked="1">
                                 <div class="row">
                                     <div class= "col-12 form-group">
@@ -205,12 +205,12 @@
 
                     <section class="sectionColor container-fluid">
                       <div class="container">
-                          <div class="col-12">
-                              <h2>Ubicación</h2>
-                              <div class="boxMap">
-                                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9030794231053!2d-58.442100585273494!3d-34.5813188638193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5932db5983f%3A0x4ccadea14acd5c06!2sHonduras%205901-5999%2C%20C1414BNK%20CABA!5e0!3m2!1ses-419!2sar!4v1650758414489!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                              </div>
-                          </div>
+                        <div class="col-12">
+                            <h2>Ubicación</h2>
+                            <div class="boxMap">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9030794231053!2d-58.442100585273494!3d-34.5813188638193!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5932db5983f%3A0x4ccadea14acd5c06!2sHonduras%205901-5999%2C%20C1414BNK%20CABA!5e0!3m2!1ses-419!2sar!4v1650758414489!5m2!1ses-419!2sar" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
                       </div>
                   </section>
                    
@@ -231,8 +231,8 @@
        <div class="terminos text-center">
                 <div class="container">
                   <div class="row">
-                   <span>Terminos y condiciones</span> <br>
-                   <h4>Botón de arrepentimiento</h4><br>
+                   <span>Terminos y condiciones</span> 
+                   <h4>Botón de arrepentimiento</h4>
                    <p>© Copyright 2022 Florencia Scarzello</p>
                    
                   </div>
