--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -169,14 +169,14 @@
                     </div>
                     </div>
                 </section>
-                 
-                 <div class="iconos">
+                 <div id="conected">
                      <h2>Sigamos conectados</h2>
-                     <div class="container-fluid text-center">
-                      <a href="#" target="_blank"></div><i class="social-icon fab fa-facebook-f"></i></a>
+                     <div id="conected--social" class="container-fluid text-center">
+                      <a href="#" target="_blank"><i class="social-icon fab fa-facebook-f"></i></a>
                       <a href="#" target="_blank"><i class="social-icon fab fa-twitter"></i></a>
                       <a href="#" target="_blank"><i class="social-icon fab fa-instagram"></i></a>
                       <a href="#" target="_blank"><i class="social-icon fas fa-envelope"></i></a>
+                    </div>
                   </div>
                  
                  <a href="" class="logowpp"><i class="fa-brands fa-whatsapp"></i></a>
