change index name

--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -16,6 +16,7 @@
     <meta property="og:title" content="Magic Balloons">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://MagicBalloons.com" />
+    <script src="../menu.js"></script>
     <meta name="keywords" content="js,css,html,programacion,glosbos,globos lindos, globos con helio,empresa de globos,magic balloons,balloons,magic">
     <meta name="description" content="Nuestros globos representan emociones compartidas. Deseos de estar juntos cuando podemos hacerlo y esperanza cuando estamos lejos. Somos mensajeros de emociones. Lo entendemos así y nos esforzamos para conseguirlo.">
     <link
@@ -37,7 +38,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../Index.html"><span class="icon-home3"></span>Home</a>
+                <a class="nav-link active" aria-current="page" href="../index.html"><span class="icon-home3"></span>Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Productos.html"><span class="price-tags"></span>Productos</a>
@@ -199,7 +200,7 @@
           
   </footer>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../menu.js"></script>
+    
     <!-- Bootstrap Scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
