--- a/Pages/Perfil.html
+++ b/Pages/Perfil.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../font-v1.0/style.css">
     <meta property="og:title" content="Magic Balloons">
     <meta property="og:type" content="website">
+    <script src="../menu.js"></script>
     <meta property="og:url" content="https://MagicBalloons.com" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -28,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../Index.html"><span class="icon-home3"></span>Home</a>
+                  <a class="nav-link active" aria-current="page" href="../index.html"><span class="icon-home3"></span>Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./Productos.html"><span class="price-tags"></span>Productos</a>
@@ -243,7 +244,7 @@
             
     </footer>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../menu.js"></script>
+    
 
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
